style.css
@font-face {
  font-family: "Aladin";
  src: url("fonts/Aladin-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Combo";
  src: url("fonts/Combo-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Sekuya";
  src: url("fonts/Sekuya-Regular.ttf") format("truetype");
}

@font-face {
    font-family: "Matemasie";
    src: url("fonts/Matemasie-Regular.ttf") format("truetype");
}

.aladin-regular {
  font-family: "Aladin", system-ui;
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

.combo-regular {
  font-family: "Combo", system-ui;
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

.sekuya-regular {
  font-family: "Sekuya", system-ui;
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

.matemasie-regular {
  font-family: "Matemasie", system-ui;
  font-weight: 400;
  font-style: normal;
  font-display: swap; 
}

.hidden{
  opacity: 0;
}

body {
  background-image: url(images/bg4.webp);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  cursor: default;
  margin: 0px;
}

header{
  display: flex;
  justify-content: center;
}

#index-header h1 {
  opacity: 0.9;
  text-align: center;
  font-family: "Matemasie";
  letter-spacing: 10px;
  font-size: 600%;
  margin: 0px;
  padding: 0px;
  color: #e4b363;
  margin-top: -20px;
}


.center{
  text-align: center;
  color: #f5f0e8;
  margin-top: 25vh;
  font-family: "Combo";
  letter-spacing: 5px;
  font-size: 35px;
  opacity: 1;
  transition: opacity ease-in-out 0.5s;
}

#tag{
  position: fixed;
  color: #e4b363;
  font-family: "Aladin";
  top: 110px;
  left: 50%;
  font-size: 20px;
  transform: translateX(-50%);
}

#tag a{
  color: #e4b363;
  text-decoration: none;
}

#tag a:hover{
  color: white;
}

.footlinks{
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  bottom: 0px;
  font-size: 40px;
}

.footlinks a{
  color: #e4b363;
  letter-spacing: 10px;
}

.footlinks a:hover{
  color: white;
}

